# quick-maths

./: .gitignore  LICENSE  README.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioEngine.cpp  AudioEngine.h  CMakeLists.txt  JniBridge.cpp
app/src/main/java/com/jaidensiu/quickMaths/: AppRoutes.kt  MainActivity.kt  MainViewModel.kt  QuickMathsApp.kt  QuickMathsApplication.kt
app/src/main/java/com/jaidensiu/quickMaths/data/: BestTimeRepository.kt  NumberRecognizer.kt  SettingsDataStore.kt  SoundManager.kt  ThemeRepository.kt
app/src/main/java/com/jaidensiu/quickMaths/domain/: HandwritingPoint.kt  MathQuestion.kt  Operation.kt  ThemePreference.kt
app/src/main/java/com/jaidensiu/quickMaths/ui/: CountdownScreen.kt  CountdownViewModel.kt  GameScreen.kt  GameState.kt  GameViewModel.kt  HandwritingCanvas.kt  HandwritingStroke.kt  QuickMathsScreen.kt  QuickMathsState.kt  QuickMathsViewModel.kt  ResultsScreen.kt  ResultsViewModel.kt  SettingsScreen.kt  SettingsViewModel.kt  StartScreen.kt  StartState.kt  StartViewModel.kt  Util.kt
app/src/main/java/com/jaidensiu/quickMaths/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/io/github/donburilabs/quickMaths/: AppRoutes.kt  MainActivity.kt  MainViewModel.kt  QuickMathsApp.kt  QuickMathsApplication.kt
app/src/main/keepRules/: rules.keep
app/src/main/res/values/: strings.xml
app/src/main/res/values-night/: themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+29 files in other folders)
